--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
 spring.jpa.hibernate.ddl-auto=update
+
+schoolloohcs.avatar.dir.path = avatars
